--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     
-    <img src="" alt="">
+    <img src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg" 
+         alt="Desenho de uma bola de cristal">
 
     <h1>Vou revelar seu destino!</h1>
     <p>Clique em "Fazer Pergunta" para que seu destino seja revelado.</p>
     <input type="text" placeholder="Digite sua pergunta">
+    <button>Fazer Pergunta</button>
 
 </body>
 </html>
