--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styel.css">
     <title>Maratona Explorer</title>
 </head>
 <body>
     
+ <div class="container">
     <img src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg" 
          alt="Desenho de uma bola de cristal">
 
@@ -17,5 +19,6 @@
     <input type="text" placeholder="Digite sua pergunta">
     <button>Fazer Pergunta</button>
 
+ </div>
 </body>
 </html>
