--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <input type="text" placeholder="Digite sua pergunta">
     <button>Fazer Pergunta</button>
 
+    <h3 class="resposta">
+        <div>Pergunta feita</div>
+    </h3>
+
  </div>
 </body>
 </html>
