--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <p>Clique em "Fazer Pergunta" para que seu destino seja revelado.</p>
     
     <input type="text" placeholder="Digite sua pergunta">
-    <button>Fazer Pergunta</button>
+    <button onclick="fazerPergunta()">Fazer Pergunta</button>
 
-    <h3 class="resposta">
-        <div>Pergunta feita</div>
+    <h3 id="resposta">
+        <div></div>
     </h3>
 
  </div>
