--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer=""></script>
     <link rel="stylesheet" href="styel.css">
     <title>Maratona Explorer</title>
 </head>
@@ -17,7 +18,7 @@
     <p>Clique em "Fazer Pergunta" para que seu destino seja revelado.</p>
     
     <input type="text" placeholder="Digite sua pergunta">
-    <button onclick="fazerPergunta()">Fazer Pergunta</button>
+    <button id="botaoPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
 
     <h3 id="resposta">
         <div></div>
